tests/machine/x/rust/group_by_sort.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/group_by_sort.rs:25:578
   |
25 | ...tal: sum(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.val); } tmp4 }) }); } result };
   |         --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&[f64]`, found `&Vec<i32>`
   |         |
   |         arguments to this function are incorrect
   |
   = note: expected reference `&[f64]`
              found reference `&Vec<i32>`
note: function defined here
  --> /workspace/mochi/tests/machine/x/rust/group_by_sort.rs:19:4
   |
19 | fn sum<T>(v: &[T]) -> T where T: std::iter::Sum<T> + Copy {
   |    ^^^    -------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq)]